fix(ctr): shrink page titles to reduce overflows

--- a/apps/juxtaposition-ui/webfiles/ctr/css/juxt.css
+++ b/apps/juxtaposition-ui/webfiles/ctr/css/juxt.css
@@ -75,7 +75,7 @@ ul {
     bottom: 0;
     height: 52px;
     line-height: 47px;
-    font-size: 25px;
+    font-size: 18px;
     white-space: nowrap;
     display: inline;
     padding-left: 15px;
